# CSDS555-ResAI-Final-Project-Research

./: .gitignore  Joyplot_responsible_AI_project.ipynb  System message instructions for llm.txt  attribute.sh  attribute_uuid_verification.py  config.json  db_handler.py  eval_submission.sh  gemma_op.txt  gender_idx.csv  identities.py  main.ipynb  main.py  main_eval.py  parquet_handler.py  pyproject.toml  requirements.txt  so_idx.csv  submission.sh  testing.py  umbrella_idx.csv  vllm_test.sh
archive/: identities.txt.OLD
configs/: __init__.py  config.yaml  configurations.py  evaluation_config.yaml  experiment_config.yaml  test_config.yaml
data/input/: dataset_creation.py  identities.csv  identities.py  identities.txt  parquet_creation.py  scenarios.csv  scenarios.txt  test_data.csv  test_data.json  (+1 more)
dataset_pipeline/: dataset_creation.py  identities.py
evaluation_pipeline/: eval_helpers.py  evaluation.py
llm_pipeline/: benchmark.py  data_loader.py  port_forwarding.py  reference.py  test.ipynb  test.py  test_sub.sh
pipelines/: PIPELINE.md  llm_testing.ipynb  pyproject.toml  requirements.txt
pipelines/benchmarking_pipeline/: ollama_benchmarking_pipeline.ipynb
pipelines/benchmarking_pipeline/notebooks/: data_loader_test.ipynb  ollama_benchmarking_pipeline.ipynb  unsloth_benchmarking_pipeline.ipynb
pipelines/benchmarking_pipeline/scripts/: benchmark.py  data_loader.py  data_saver.py
pipelines/evaluation_pipeline/: evaluation_pipeline.ipynb
tests/: test.ipynb  test_brdetector.py  test_db.sh
visualization/: data_prep.py
visualizations/: heatmap.py
(+6 files in other folders)
