[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10 <3.14"
torch = "2.9.0"
unsloth = "^2025.11.3"
accelerate = "^1.12.0"
bitsandbytes = "^0.48.2"
tqdm = "^4.67.1"
pandas = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
